<resources>
    <string name="app_name">OrdenaIsso</string>
    <string name="frase_inicio">Vamos inserir valores!</string>
    <string name="quantidade">Digite a quantidade</string>
    <string name="confirma">Confirmar</string>
    <string name="continua">Próximo</string>
    <string name="telaAlgoritmo">Ir para a tela de algoritmo</string>
    <string name="algoritmoNome">Nome do Algoritmo</string>
    <string name="iteracao">Iteração</string>
    <string name="itNum">1</string>
    <string name="qAcontecendo">O que está acontecendo?</string>
    <string name="descPasso">Ex: Ao se comparar valores 10 e 1, o 10 é maior então devê-se trocá-los de posição...</string>
    <string name="anterior">Anterior</string>
    <string name="insereValores">Insira os números a serem ordenados!</string>
    <string name="msgPosicoesAnalisadas">Posições sendo analisadas neste momento:</string>
    <string name="posicoesAnalisadas">0 e 1</string>

</resources>
