<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlgoritmosActivity"
    android:orientation="horizontal"
    android:screenOrientation = 'landscape'
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:layout_weight="2"
        android:background="@color/branco"
        android:id="@+id/idLinearLista">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_marginTop="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msgPosicoesAnalisadas"
                android:textColor="@color/roxoclaro"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"/>

            <TextView
                android:layout_marginTop="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/posicoesAnalisadas"
                android:textColor="@color/roxoclaro"
                android:layout_gravity="center"
                android:textStyle="bold"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/roxoclaro">
        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/algoritmoNome"
            android:id="@+id/idNomeAlg"
            android:textColor="@color/branco"
            android:textSize="20sp"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/iteracao"
            android:textColor="@color/branco"
            android:textSize="15sp"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/itNum"
            android:id="@+id/idItNum"
            android:textColor="@color/branco"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/qAcontecendo"
            android:textColor="@color/branco"
            android:textSize="15sp"/>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/descPasso"
            android:textColor="@color/branco"
            />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginBottom="10sp"
            >


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anterior"
                android:id="@+id/idbtnAnterior"
                android:background="@color/branco"
                android:textColor="@color/roxoclaro"
                android:layout_marginEnd="5sp"
                android:padding="10sp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continua"
                android:id="@+id/idbtnProxPasso"
                android:background="@color/branco"
                android:textColor="@color/roxoclaro"
                android:layout_marginStart="5sp"
                android:padding="10sp"
                />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>